--- a/bin/index.html
+++ b/bin/index.html
@@ -45,6 +45,13 @@
 	<!--自定义的js(src文件夹下)文件自动添加到下面jsfile模块标签里面里-->
 	<!--删除标签，ide不会自动添加js文件，请谨慎操作-->
 	<!--jsfile--startTag-->
+	<script src="js/Consts.js"></script>
+	<script src="js/Bullet.js"></script>
+	<script src="js/ui/layaUI.max.all.js"></script>
+	<script src="js/view/background.js"></script>
+	<script src="js/view/enemy.js"></script>
+	<script src="js/view/gun.js"></script>
+	<script src="js/view/role.js"></script>
 	<!--jsfile--endTag-->
 
 	<!--启动类添加到这里-->
